--- a/Project/IsometricConcept/IsometricConcept.CSharp.csproj
+++ b/Project/IsometricConcept/IsometricConcept.CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\SaveLoad\SaveLoad.cs" />
+    <Compile Include="Assets\Scripts\SaveLoad\TileObjectStor.cs" />
     <Compile Include="Assets\Scripts\World\Endlesness.cs" />
     <Compile Include="Assets\Scripts\World\GenMapEditor.cs" />
     <Compile Include="Assets\Scripts\World\GenWorld.cs" />
