--- a/Project/IsometricConcept/IsometricConcept.CSharp.csproj
+++ b/Project/IsometricConcept/IsometricConcept.CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Player\CheatyCheatyDestroy.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\SaveLoad\SaveLoad.cs" />
     <Compile Include="Assets\Scripts\SaveLoad\TileObjectStor.cs" />
