--- a/Project/IsometricConcept/IsometricConcept.CSharp.csproj
+++ b/Project/IsometricConcept/IsometricConcept.CSharp.csproj
@@ -63,7 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player\CheatyCheatyDestroy.cs" />
+    <Compile Include="Assets\Scripts\Player\Direction.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Player\Selection.cs" />
     <Compile Include="Assets\Scripts\SaveLoad\SaveLoad.cs" />
     <Compile Include="Assets\Scripts\SaveLoad\TileObjectStor.cs" />
     <Compile Include="Assets\Scripts\World\Endlesness.cs" />
